# ClearFace

./: Facial_Keypoints_Detection.ipynb  README.md  __init__.py  blocks.py  build.sh  centroidtracker.py  download.sh  models.py  requirements.txt  run.py  util.py  utils.py
centroid_tracker/: __init__.py
expression/: CMakeLists.txt  __init__.py  expression.cpp
expression/module/: CMakeLists.txt
face_detection/: __init__.py
gender/: CMakeLists.txt  __init__.py  gender.cpp
gender/module/: Makefile  cmake_install.cmake  module.h
landmarks/: __init__.py  models.py
models/: expression.pth  gender.pth  multiple.pth
multiple/: CMakeLists.txt  __init__.py  multiple.cpp
multiple/module/: module.cpp
notebooks/: ConvToTorchScript.ipynb  Facial_Keypoints_Detection.ipynb  create_gif.ipynb
